modified:   script.js 	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
 
 .chart-box {
   padding: 10px;
-  background-color: #004d00;
+  background-color: gray;
   color: white;
   border-radius: 10px;
 }
