--- a/style.css
+++ b/style.css
@@ -243,16 +243,81 @@ button:hover {
 }
 
 .chart-area {
+  width: 100%;
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  background-color: darkgray;
+  padding: 0.5rem;
+  border-radius: 8px;
+}
+
+.chart-header {
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 0.5rem 1rem;
+  background-color: #1b4d2e; /* dark green */
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+  margin-bottom: 1rem;
+}
+
+.player-card {
+  border-top: 15px solid orange;
+  border-bottom: 15px solid orange;
+  color: white;
+  border-radius: 6px;
+  overflow: hidden;
+  font-family: Arial, sans-serif;
+}
+
+.player-card-header {
+  text-align: center;
+  font-weight: bold;
+  padding: 0.5rem;
+  font-style: italic;
+  border-bottom: 1px solid white;
+}
+
+.player-card-body {
+  display: flex;
+  align-items: stretch;
+}
+
+.player-photo {
+  width: 225px;
+  background-color: #1b4d2e;
+  border: 1px solid white;
+}
+
+.player-info {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.player-info th,
+.player-info td {
+  border: 1px solid white;
+  padding: 0.5rem;
+  text-align: left;
+}
+
+.player-info th {
+  font-weight: normal;
+}
+
+
+.chart-container {
   display: flex;
   flex-wrap: wrap;
   gap: 1.5rem;
   justify-content: space-between;
-  margin-top: 2rem;
 }
 
-.chart-container {
-  flex: 1 1 600px;
-  background-color: #f0f0f0;
+.chart-content {
+  flex: 1 1 calc(50% - 1.5rem);
+  background-color: #363636;
   padding: 1.5rem;
   border-radius: 12px;
   box-shadow: 0 6px 16px rgba(0, 0, 0, 0.05);
@@ -260,7 +325,14 @@ button:hover {
   justify-content: center;
   align-items: center;
   min-height: 400px;
+  box-sizing: border-box;
 }
+
+.chart-content canvas {
+  width: 100% !important;
+  height: 100% !important;
+}
+
 
 /* Responsive */
 @media (max-width: 900px) {
